--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <title>Compra juegos de mesa - Zacatrus</title>
+    <meta
+      name="description"
+      content="En Zacatrus puedes comprar juegos de mesa.
+    Te ofrecemos las últimas novedades y más de 8000 juegos y accesorios.
+    Llevamos los juegos a tu casa o puedes pasar a visitarnos a nuestras tiendas físicas."
+    />
+    <meta name="keywords" content="juegos, mesa, zacatrus, catán, ocio" />
+    <meta name="author" content`="Lidia Gallardo" />
     <script src="./main.js" defer></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body></body>
 </html>
