--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     Llevamos los juegos a tu casa o puedes pasar a visitarnos a nuestras tiendas físicas."
     />
     <meta name="keywords" content="juegos, mesa, zacatrus, catán, ocio" />
-    <meta name="author" content`="Lidia Gallardo" />
+    <meta name="author" content="Lidia Gallardo" />
     <script src="./main.js" defer></script>
     <link rel="stylesheet" href="./styles.css" />
   </head>
